objects/Project__c/fields/Additional_Dashboard_Group__c.field-meta.xml
<CustomField>
    <fullName>Additional_Dashboard_Group__c</fullName>
    <description>Project Campaign Flag 
&quot;No Regrets - Senior Executive Growth Campaign&quot;</description>
    <inlineHelpText>Project Campaign Flag 
&quot;No Regrets - Senior Executive Growth Campaign&quot;</inlineHelpText>
    <label>Additional Dashboard Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Regrets</fullName>
            </value>
            <value>
                <fullName>2014 OPS SG&amp;A Savings</fullName>
            </value>
            <value>
                <fullName>2014 Access Management SG&amp;A Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>