objects/Project__c/fields/Admin_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Admin_Project_Type__c</fullName>
    <label>Admin Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>KLO</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
                <default>true</default>
                <label>Project</label>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>