objects/Project__c/fields/BP_T_Initiative__c.field-meta.xml
<CustomField>
    <fullName>BP_T_Initiative__c</fullName>
    <inlineHelpText>Select which BP&amp;T Initiative this project is aligned with</inlineHelpText>
    <label>BP&amp;T Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Architectural Framework Creation</fullName>
            </value>
            <value>
                <fullName>Architectural Platform consolidation</fullName>
            </value>
            <value>
                <fullName>Architectural Platform Deprecation</fullName>
            </value>
            <value>
                <fullName>Automate Workflow across business verticals</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Cost Savings</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Infrastructure Maintenance</fullName>
            </value>
            <value>
                <fullName>Network Expansion</fullName>
            </value>
            <value>
                <fullName>Network Monitoring</fullName>
            </value>
            <value>
                <fullName>Policies and Procedures</fullName>
            </value>
            <value>
                <fullName>Product Development and Improvement</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Self-Service</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>