objects/Project__c/fields/Commitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to track whether a project schedule/plan has been committed to or if it is still in the planning stages.</description>
    <inlineHelpText>Has the implementation plan for this project been finalized and committed?  If yes, check this box.</inlineHelpText>
    <label>Commitment Status</label>
    <type>Checkbox</type>
</CustomField>