objects/Project__c/fields/Committed_Year_1_OPEX_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Committed_Year_1_OPEX_Reduction__c</fullName>
    <label>Committed Year 1 OPEX Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>