objects/Project__c/fields/Core_Team_Supporting__c.field-meta.xml
<CustomField>
    <fullName>Core_Team_Supporting__c</fullName>
    <label>Core Team Supporting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ethernet Services</fullName>
            </value>
            <value>
                <fullName>Cloud Voice Services</fullName>
            </value>
            <value>
                <fullName>Cloud Firewall Services</fullName>
            </value>
            <value>
                <fullName>Online/Portal</fullName>
            </value>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>Voice Services Footprint Expansion</fullName>
            </value>
            <value>
                <fullName>Master Stream</fullName>
            </value>
            <value>
                <fullName>Collaboration &amp; Messaging</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Strategic Voice Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>