objects/Project__c/fields/Customer_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commit_Date__c</fullName>
    <description>Agreed upon go live date for project.</description>
    <inlineHelpText>Agreed upon go live date for project.</inlineHelpText>
    <label>Current Customer Commit Date</label>
    <type>Date</type>
</CustomField>