objects/Project__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <label>Dependencies</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>