objects/Project__c/fields/Eligible_For_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Prioritization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be used to determine if the project is visible on Executive level Prioritization reports</description>
    <inlineHelpText>Is this project eligible to be prioritized by the executive team?  If yes, check this box.</inlineHelpText>
    <label>Eligible For Prioritization</label>
    <type>Checkbox</type>
</CustomField>