objects/Project__c/fields/Executive_Request__c.field-meta.xml
<CustomField>
    <fullName>Executive_Request__c</fullName>
    <description>Utilized to indicate this is an executive request project.</description>
    <inlineHelpText>Utilized to indicate this is an executive request project.</inlineHelpText>
    <label>Executive Mandate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>