objects/Project__c/fields/Executive_Review__c.field-meta.xml
<CustomField>
    <fullName>Executive_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Review</label>
    <type>Checkbox</type>
</CustomField>