objects/Project__c/fields/General_CAPEX_Project__c.field-meta.xml
<CustomField>
    <fullName>General_CAPEX_Project__c</fullName>
    <label>General CAPEX Project</label>
    <type>TextArea</type>
</CustomField>