objects/Project__c/fields/Hardware_CAPEX_Project__c.field-meta.xml
<CustomField>
    <fullName>Hardware_CAPEX_Project__c</fullName>
    <label>Hardware CAPEX Project</label>
    <type>TextArea</type>
</CustomField>