objects/Project__c/fields/IT_Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>IT_Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <summarizedField>Project_Resource__c.Actual_Hours__c</summarizedField>
    <summaryForeignKey>Project_Resource__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>