objects/Project__c/fields/L1_Business_Description__c.field-meta.xml
<CustomField>
    <fullName>L1_Business_Description__c</fullName>
    <description>Layer 1 Business Description - Used for the L1 summary slide.</description>
    <inlineHelpText>Layer 1 Business Description - Used for the L1 summary slide.</inlineHelpText>
    <label>L1 Business Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build &amp; Network Enablement</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Order to Cash</fullName>
            </value>
            <value>
                <fullName>Product Development</fullName>
            </value>
            <value>
                <fullName>Prospect to Signature</fullName>
            </value>
            <value>
                <fullName>Trouble to Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>