objects/Project__c/fields/L2_Grouping__c.field-meta.xml
<CustomField>
    <fullName>L2_Grouping__c</fullName>
    <description>Layer 2 Grouping of projects - Logical grouping to break up projects between project types.</description>
    <inlineHelpText>Layer 2 Grouping of projects - Logical grouping to break up projects between project types.</inlineHelpText>
    <label>L2 Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>Base Pricing</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Circuit Design</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Cost Savings</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Detection</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Isolation</fullName>
            </value>
            <value>
                <fullName>M&amp;A Activities</fullName>
            </value>
            <value>
                <fullName>Maintain</fullName>
            </value>
            <value>
                <fullName>Network Evolution</fullName>
            </value>
            <value>
                <fullName>Network Growth &amp; Technology Refresh</fullName>
            </value>
            <value>
                <fullName>Network Resource Automation</fullName>
            </value>
            <value>
                <fullName>New Logo</fullName>
            </value>
            <value>
                <fullName>Office Moves</fullName>
            </value>
            <value>
                <fullName>Order Accept</fullName>
            </value>
            <value>
                <fullName>Order Entry</fullName>
            </value>
            <value>
                <fullName>Organizational</fullName>
            </value>
            <value>
                <fullName>OSS Architecture</fullName>
            </value>
            <value>
                <fullName>OSS Consolidation</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Efficiencies</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Product Participation</fullName>
            </value>
            <value>
                <fullName>Provisioning</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>