objects/Project__c/fields/L3_Grouping__c.field-meta.xml
<CustomField>
    <fullName>L3_Grouping__c</fullName>
    <description>Layer 3 Grouping of projects - Logical grouping to break up projects between project types.</description>
    <inlineHelpText>Layer 3 Grouping of projects - Logical grouping to break up projects between project types.</inlineHelpText>
    <label>L3 Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account On-boarding Workflow</fullName>
            </value>
            <value>
                <fullName>Automated Expense Processing (iExpense)</fullName>
            </value>
            <value>
                <fullName>Auto Provisioning of Services</fullName>
            </value>
            <value>
                <fullName>Bay Area</fullName>
            </value>
            <value>
                <fullName>BCS System Coversion</fullName>
            </value>
            <value>
                <fullName>BCX500 Replacement</fullName>
            </value>
            <value>
                <fullName>BI New Platform and Integration</fullName>
            </value>
            <value>
                <fullName>BI System Stabilization</fullName>
            </value>
            <value>
                <fullName>Border Router Replacements</fullName>
            </value>
            <value>
                <fullName>Catalog Redesign</fullName>
            </value>
            <value>
                <fullName>Cloud Firewall 5.0</fullName>
            </value>
            <value>
                <fullName>Colorado Move</fullName>
            </value>
            <value>
                <fullName>Complex Account Hierarchy</fullName>
            </value>
            <value>
                <fullName>Corporate Move</fullName>
            </value>
            <value>
                <fullName>Create incoming/outgoing BSB ASR process</fullName>
            </value>
            <value>
                <fullName>Customer System of Record</fullName>
            </value>
            <value>
                <fullName>CVAA Compliance</fullName>
            </value>
            <value>
                <fullName>Dark Fiber Productization</fullName>
            </value>
            <value>
                <fullName>Data Center Move</fullName>
            </value>
            <value>
                <fullName>Design &amp; implement systematic jeopardy and date change process</fullName>
            </value>
            <value>
                <fullName>E-LINE Upmarket</fullName>
            </value>
            <value>
                <fullName>Enable auto provisioning</fullName>
            </value>
            <value>
                <fullName>Enable disconnect automation</fullName>
            </value>
            <value>
                <fullName>End to end change management process improvements</fullName>
            </value>
            <value>
                <fullName>Enhance network alarming capabilities</fullName>
            </value>
            <value>
                <fullName>Enrich ticketing capabilities</fullName>
            </value>
            <value>
                <fullName>EoC Expansions</fullName>
            </value>
            <value>
                <fullName>EoTDM Access</fullName>
            </value>
            <value>
                <fullName>Ethernet configuration standardization</fullName>
            </value>
            <value>
                <fullName>Ethernet Service Provisioning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>