objects/Project__c/fields/Labor_CAPEX_Project__c.field-meta.xml
<CustomField>
    <fullName>Labor_CAPEX_Project__c</fullName>
    <label>Labor CAPEX Project</label>
    <type>TextArea</type>
</CustomField>