objects/Project__c/fields/Marketing_LOE__c.field-meta.xml
<CustomField>
    <fullName>Marketing_LOE__c</fullName>
    <label>Marketing LOE</label>
    <summarizedField>Project_LOE__c.Estimated_People_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Project_LOE__c.Functional_Group__c</field>
        <operation>startsWith</operation>
        <value>Marketing</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_LOE__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>