objects/Project__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestones</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>