objects/Project__c/fields/New_Customer_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Commit_Date__c</fullName>
    <label>New Customer Commit Date</label>
    <type>Date</type>
</CustomField>