objects/Project__c/fields/NPRF_Submitted__c.field-meta.xml
<CustomField>
    <fullName>NPRF_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NPRF has been submitted for approval</description>
    <label>NPRF Submitted</label>
    <type>Checkbox</type>
</CustomField>