objects/Project__c/fields/Number_of_Open_Issues__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Issues__c</fullName>
    <label>Number of Open Issues</label>
    <summaryFilterItems>
        <field>Project_Issue__c.Status__c</field>
        <operation>equals</operation>
        <value>Identified, Assigned</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Issue__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>