objects/Project__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ideation</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Ideation</label>
            </value>
            <value>
                <fullName>Gate 0 - Scoping Consideration</fullName>
                <color>#78C953</color>
                <label>Gate 0 - Scoping Consideration</label>
            </value>
            <value>
                <fullName>Scoping</fullName>
                <color>#E27001</color>
                <label>Scoping</label>
            </value>
            <value>
                <fullName>Gate 1 - Commitment/Funding Consideration</fullName>
                <color>#A845DC</color>
                <label>Gate 1 - Commitment/Funding Consideration</label>
            </value>
            <value>
                <fullName>Project Request Approved</fullName>
            </value>
            <value>
                <fullName>Requirements/Design</fullName>
                <color>#F3D904</color>
                <label>Requirements/Design</label>
            </value>
            <value>
                <fullName>Gate 2 - Design/LOE Assessment</fullName>
            </value>
            <value>
                <fullName>Build/Test/Sprint Release</fullName>
                <color>#A53711</color>
                <label>Build/Test/Sprint Release</label>
            </value>
            <value>
                <fullName>Gate 3 - Launch Readiness</fullName>
                <color>#66E9BD</color>
                <label>Gate 3 - Launch Readiness</label>
            </value>
            <value>
                <fullName>Launch</fullName>
                <color>#419249</color>
                <label>Launch</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#F96FB7</color>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>