objects/Project__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical</fullName>
            </value>
            <value>
                <fullName>2 - High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Low</fullName>
            </value>
            <value>
                <fullName>5 - Lowest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>