objects/Project__c/fields/Product_Development_Lead__c.field-meta.xml
<CustomField>
    <fullName>Product_Development_Lead__c</fullName>
    <label>Product Development Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jim Carlson</fullName>
            </value>
            <value>
                <fullName>Matt Case</fullName>
            </value>
            <value>
                <fullName>Peter Zenti</fullName>
            </value>
            <value>
                <fullName>Melody Fisher</fullName>
            </value>
            <value>
                <fullName>Gabe Tuerk</fullName>
            </value>
            <value>
                <fullName>Angie Johnson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>