objects/Project__c/fields/Product_Line_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Ranking__c</fullName>
    <label>Product Line Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>