objects/Project__c/fields/Project_Classification__c.field-meta.xml
<CustomField>
    <fullName>Project_Classification__c</fullName>
    <description>The high level project type to match the CAPEX project types.</description>
    <inlineHelpText>The high level project type to match the CAPEX project types.</inlineHelpText>
    <label>Project Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>