objects/Project__c/fields/Project_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Short_Description__c</fullName>
    <description>Short, concise project description.  To be used on executive reports and PM views</description>
    <inlineHelpText>Enter in a short, concise description of this project.  This field allows for 40 characters.  Use the description field to add a more detailed description.</inlineHelpText>
    <label>Project Short Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>