objects/Project__c/fields/Project_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Project_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>