objects/Project__c/fields/Resource_LOE__c.field-meta.xml
<CustomField>
    <fullName>Resource_LOE__c</fullName>
    <description>Resource hours for the project.</description>
    <label>Resource LOE</label>
    <summarizedField>Project_Resource__c.LOE__c</summarizedField>
    <summaryForeignKey>Project_Resource__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>