objects/Project__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <description>Measurement of Resource availability in terms of personnel availability and budget.</description>
    <inlineHelpText>Measurement of Resource availability in terms of personnel availability and budget.</inlineHelpText>
    <label>Resources</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#006600</color>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#990000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>