objects/Project__c/fields/Software_CAPEX_Project__c.field-meta.xml
<CustomField>
    <fullName>Software_CAPEX_Project__c</fullName>
    <label>Software CAPEX Project</label>
    <type>TextArea</type>
</CustomField>