objects/Project__c/fields/Strategic_Fit__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if a project is a strategic fit for the company.</description>
    <inlineHelpText>Is this project a strategic fit?  If yes, check this box.</inlineHelpText>
    <label>Strategic Fit</label>
    <type>Checkbox</type>
</CustomField>