objects/Project__c/fields/Total_LOE__c.field-meta.xml
<CustomField>
    <fullName>Total_LOE__c</fullName>
    <formula>Engineering_LOE__c + Marketing_LOE__c + Operations_LOE__c + Provisioning_LOE__c + Sales_LOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LOE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>