objects/Project__c/fields/Unique_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Project_ID__c</fullName>
    <description>Unique ID of the Project for use in external systems</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique ID of the Project for use in external systems</inlineHelpText>
    <label>Unique Project ID</label>
    <type>Text</type>
</CustomField>