objects/Project__c/fields/Value_Stream__c.field-meta.xml
<CustomField>
    <fullName>Value_Stream__c</fullName>
    <description>High level grouping of projects on dashboards.</description>
    <inlineHelpText>High level grouping of projects on dashboards.</inlineHelpText>
    <label>Value Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Network Enablement</fullName>
            </value>
            <value>
                <fullName>Order to Cash</fullName>
            </value>
            <value>
                <fullName>Prospect to Signature</fullName>
            </value>
            <value>
                <fullName>Trouble to Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>