objects/Project__c/validationRules/CCD_Must_Be_Later.validationRule-meta.xml
<ValidationRule>
    <fullName>CCD_Must_Be_Later</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(New_Customer_Commit_Date__c) &amp;&amp; New_Customer_Commit_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>New_Customer_Commit_Date__c</errorDisplayField>
    <errorMessage>The Customer Commit Date cannot be set before the current time</errorMessage>
</ValidationRule>