objects/Project__c/validationRules/LOE_Requred_at_Gate_1.validationRule-meta.xml
<ValidationRule>
    <fullName>LOE_Requred_at_Gate_1</fullName>
    <active>true</active>
    <description>A Project LOE (Lookup Object to Project) entry needs to be created if at Gate 1 or after</description>
    <errorConditionFormula>CASE(
TEXT(Phase__c), 
&#39;Gate 1 - Commitment/Funding Consideration&#39;, 1, 
&#39;Project Request Approved&#39;, 1, 
&#39;Requirements/Design&#39;, 1, 
&#39;Gate 2 - Design/LOE Assessment&#39;, 1, 
&#39;Build/Test/Sprint Release&#39;, 1, 
&#39;Gate 3 - Launch Readiness&#39;, 1, 
&#39;Launch&#39;, 1, 0) == 1 &amp;&amp;
(ISCHANGED(Phase__c) &amp;&amp;  IT_Revised_LOE__c == 0 &amp;&amp;  BP_T_Resources_Required__c)</errorConditionFormula>
    <errorMessage>A Project LOE related record with a BP&amp;T Functional Group is required to move this project to Gate 1 and beyond since there is a BP&amp;T Project Lead. There is a link at top of project page to go to the Project LOEs section to be able to add a New LOE.</errorMessage>
</ValidationRule>