objects/Project__c/validationRules/New_CCD_Change_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>New_CCD_Change_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(New_Customer_Commit_Date__c) &amp;&amp; 
NOT(ISNULL(New_Customer_Commit_Date__c)) &amp;&amp;
NOT(ISNULL(Customer_Commit_Date__c)) &amp;&amp; ISBLANK(TEXT(New_CCD_Change_Reason__c))</errorConditionFormula>
    <errorDisplayField>New_CCD_Change_Reason__c</errorDisplayField>
    <errorMessage>A new Customer Commit Date Change Reason must be specified to change the Customer Commit Date even if it is the same reason that is saved.</errorMessage>
</ValidationRule>