objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Commit_Date__c</columns>
    <columns>Above_Below_Line__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Health__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Phase__c</columns>
    <columns>Project_Lead__c</columns>
    <columns>Description__c</columns>
    <columns>Portfolio_Rank__c</columns>
    <columns>Project_Sponsor__c</columns>
    <columns>Program__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Phase__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>All</label>
</ListView>