objects/Project__c/listViews/All_Projects_Approval.listView-meta.xml
<ListView>
    <fullName>All_Projects_Approval</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Program__c</columns>
    <columns>NAME</columns>
    <columns>Phase__c</columns>
    <columns>Combined_Status__c</columns>
    <columns>User__c</columns>
    <columns>Project_Lead__c</columns>
    <columns>Customer_Commit_Date__c</columns>
    <columns>Next_Sprint_Release__c</columns>
    <columns>BP_T_Project_Complete_Date__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>NPRF_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold,Cancelled,Backlog,Completed</value>
    </filters>
    <filters>
        <field>Phase__c</field>
        <operation>equals</operation>
        <value>Gate 1 - Commitment/Funding Consideration</value>
    </filters>
    <label>All Projects Ready for Approval</label>
</ListView>